--- a/index.html
+++ b/index.html
@@ -38,168 +38,172 @@
 
             
             <div class="wrapper">
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>СТАРТ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Первый вход в личный кабинет</h5>
+                            <h5 class="card-title">Первый вход в личный кабинет</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="./desktop.html">
-                    <div class="card border-primary mb-3">
+
+                <div class="child">
+                    <a class="a_card" href="./desktop.html">
                         <div class="card-header"><b>РАБОЧИЙ СТОЛ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Dashboard для администрирования работы в Дом.Контроль</h5>
+                            <h5 class="card-title">Dashboard для администрирования работы в Дом.Контроль</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>СОТРУДНИКИ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Назначаем роли сотрудникам</h5>
+                            <h5 class="card-title">Назначаем роли сотрудникам</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ОБЪЕКТЫ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Добавляем дома прикрепленные к УК</h5>
+                            <h5 class="card-title">Добавляем дома прикрепленные к УК</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ЗВОНКИ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Выбираем <br>IP-телефонию</h5>
+                            <h5 class="card-title">Выбираем <br>IP-телефонию</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child"> 
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ОБРАЩЕНИЯ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Удобный раздел для приема обращений</h5>
+                            <h5 class="card-title">Удобный раздел для приема обращений</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ОТКЛЮЧЕНИЯ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Уведомить жителей о планируемых отключениях</h5>
+                            <h5 class="card-title">Уведомить жителей о планируемых отключениях</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>КЛЮЧИ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Выданные ключи под контролем</h5>
+                            <h5 class="card-title">Выданные ключи под контролем</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ПРОПУСКА</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Для закрытых территорий</h5>
+                            <h5 class="card-title">Для закрытых территорий</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ПОМЕЩЕНИЯ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Подробная информация о помещении</h5>
+                            <h5 class="card-title">Подробная информация о помещении</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ИНФОРМИРОВАНИЕ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Новости УК<br>Оповещения<br>Объявления</h5>
+                            <h5 class="card-title">Новости УК<br>Оповещения<br>Объявления</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ОПРОСЫ / СОБРАНИЯ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Провести собрание быстро и просто</h5>
+                            <h5 class="card-title">Провести собрание быстро и просто</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ФИНАНСЫ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Счета и акты<br>Реестр платежей<br>Услуги и тарифы</h5>
+                            <h5 class="card-title">Счета и акты<br>Реестр платежей<br>Услуги и тарифы</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ПОКАЗАНИЯ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Контроль счетчиков и показаний</h5>
+                            <h5 class="card-title">Контроль счетчиков и показаний</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>АНАЛИТИКА</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Подробная сводка важных показателей</h5>
+                            <h5 class="card-title">Подробная сводка важных показателей</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>НАСТРОЙКИ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Добавить сотрудников<br>Настроить окружение<br>Добавить подрядчика и другие</h5>
-                        </div>
-                    </div>
-                </a>
+                            <h5 class="card-title">Добавить сотрудников<br>Настроить окружение<br>Добавить подрядчика и другие</h5>
+                        </div> 
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>САЙТ КОМПАНИИ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Получите готовый сайт связанный с личным кабинетом</h5>
+                            <h5 class="card-title">Получите готовый сайт связанный с личным кабинетом</h5>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
-                <a class="a_card" href="">
-                    <div class="card border-primary mb-3">
+                <div class="child">
+                    <a class="a_card" href="">
                         <div class="card-header"><b>ПОДКЛЮЧЕНИЯ</b></div>
                         <div class="card-body">
-                        <h5 class="card-title">Заявки на подключение из мобильного приложения для жителей</h5>
+                            <h5 class="card-title">Заявки на подключение из мобильного приложения для жителей</h5>
                         </div>
-                    </div>
-                </a>
-
+                    </a>
+                </div>
             </div>
             
             <!-- <img src="img/desktop1.png" class="card-img" alt="desktop1"> -->
